tests/error/type_errors/or_not_bool_right.py
import tests.error.util

from guppy.compiler import GuppyModule, guppy
from tests.error.util import NonBool

module = GuppyModule("test")
module.load(tests.error.util)


@guppy(module)
def foo(x: bool, y: NonBool) -> bool:
    return x or y


module.compile(True)
