tests/error/type_errors/or_not_bool_right.err
Error: Not truthy (at $FILE:7:16)
  | 
5 | @guppy
6 | def foo(x: bool, y: NonBool) -> bool:
7 |     return x or y
  |                 ^ Expression of type `NonBool` is not truthy

Help: Implement missing method: `__bool__: NonBool -> bool`

Guppy compilation failed due to 1 previous error
